Centos/examples/traefik/nginx-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-traefik-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-traefik-deployment
  namespace: nginx-traefik-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-traefik-test-service
  namespace: nginx-traefik-deployment
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-traefik-ingress
  namespace: nginx-traefik-deployment
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nginx.traefik.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-traefik-test-service
          servicePort: 80
